fixed the cloud z-index issues

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ input {
 
 .menu {
   position: fixed;
+  z-index: 2;
   width: 100vw;
   height: 100vh;
   top: 0;
@@ -144,7 +145,7 @@ input {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 #menuToggle:checked ~ .menuOpen .open:after {
@@ -154,7 +155,7 @@ input {
   position: relative;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 #menuToggle:not(:checked) ~ .menuEffects ul {
@@ -179,9 +180,9 @@ strong{
   height: 400px;
 }
 .intro-section p {
+  z-index: 1;
   font-size: 1.556rem;
   text-align: center;
-  z-index: 1;
 }
 .project-section{
   display: flex;
